<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16sdp"
    android:padding="@dimen/_16sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FilterDialogFragment">

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/rgColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbAnyColor"
        app:layout_constraintTop_toBottomOf="@id/txtColor"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbAnyColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/any_color"/>

        <RadioButton
            android:id="@+id/rbBlackAndWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/black_and_white"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tvOrientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orientation"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/rgColor"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/rgOrientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbAnyLandscape"
        app:layout_constraintTop_toBottomOf="@id/tvOrientation"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbAnyLandscape"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/any"/>

        <RadioButton
            android:id="@+id/rbPortrait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/landscape"/>

        <RadioButton
            android:id="@+id/rbLandscape"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/portrait"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/rgOrientation"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/rgOrientation"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:backgroundTint="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/rgOrientation"
        app:layout_constraintStart_toEndOf="@id/btnClear"/>

</androidx.constraintlayout.widget.ConstraintLayout>